@@ -304,9 +304,6 @@ public:
 					// Add npc to 'nearby' list.
 	void add_nearby_npc(Npc_actor *npc);
 	void remove_nearby_npc(Npc_actor *npc);
-					// Track npcs in range of chunks.
-	void add_nearby_npcs(int from_cx, int from_cy,
-						int stop_cx, int stop_cy);
 					// Get all nearby NPC's.
 	void get_nearby_npcs(Actor_queue& list);
 					// Update NPCs' schedules.
